Flesh out Visitor/Transformer hierarchy, enabling return to Java 17