@@ -24,25 +24,16 @@ dependencies {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_18
-    targetCompatibility = JavaVersion.VERSION_18
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
 }
 
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
-    options.compilerArgs.add("--enable-preview")
-}
-
-eclipse.jdt.file {
-    withProperties {
-        setProperty("org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures", "enabled")
-        setProperty("org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures", "ignore")
-    }
 }
 
 tasks.named<Test>("test") {
     useJUnitPlatform()
-    jvmArgs("--enable-preview")
 }
 
 jacoco {
